[package]
name = "aeronet_wt_wasm"
description = "WASM WebTransport transport implementation for aeronet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
crate-type = [ "rlib", "cdylib" ]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
## Enables [`bevy`](https://docs.rs/bevy) support.
bevy = [ "dep:bevy", "aeronet/bevy" ]

[dependencies]
aeronet.workspace = true

derivative.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true

bevy = { workspace = true, optional = true }

[dependencies.web-sys]
workspace = true
features = [
    "DomException",
    "ReadableStream",
    "WritableStream",
    "ReadableStreamDefaultReader",
    "WritableStreamDefaultWriter",
]

[dev-dependencies]
aeronet_example.workspace = true
bevy = { workspace = true, default-features = true }
bevy_egui.workspace = true
