[package]
name = "aeronet_wtransport"
version = "0.1.0"
edition = "2021"
description = "WebTransport transport implementation for aeronet"
authors = [ "aecsocket <aecsocket@tutanota.com>" ]
repository = "https://github.com/aecsocket/aeronet"
keywords = [ "gamedev", "network", "bevy" ]
categories = [ "game-development", "network-programming" ]
license = "MIT OR Apache-2.0"

[features]
bevy = [ "dep:bevy", "aeronet/bevy" ]
serde = [ "dep:serde" ]
dangerous-configuration = [ "wtransport/dangerous-configuration" ]

[dependencies]
thiserror = "1.0.47"
anyhow = "1.0.75"
bevy = { version = "0.11.2", default-features = false, optional = true }
derivative = { version = "2.2.0", optional = true }

aeronet = { path = "..", version = "0.1.0" }
wtransport = "0.1.3"
tokio = { version = "1.32.0", default-features = false, features = [ "rt", "rt-multi-thread" ] }
serde = { version = "1.0.188", optional = true }

[dev-dependencies]
bevy = "0.11.2"
anyhow = "1.0.71"
base64 = "0.21.0"
rcgen = "0.11.1"
ring = "0.16.20"
time = "0.3.21"
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[[example]]
name = "echo_client"
path = "examples/echo_client.rs"
required-features = [ "bevy" ]

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"
required-features = [ "bevy" ]
