[package]
name = "examples"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
aeronet = { workspace = true, features = ["visualizer"] }
aeronet_replicon = { workspace = true, features = ["client", "server"] }
aeronet_websocket = { workspace = true, features = ["client", "server"] }
aeronet_webtransport = { workspace = true, features = [
  "client",
  "dangerous-configuration",
  "server",
] }
bevy = { workspace = true }
bevy_egui = { workspace = true }
bevy_replicon = { workspace = true }
cfg-if = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
