[package]
name = "okbytes"
description = "An ok interface around byte buffers"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
authors = ["aecsocket <aecsocket@tutanota.com>"]
repository = "https://github.com/aecsocket/aeronet"
keywords = ["network", "bytes"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"

[lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "bytes/std"]
std = []
bytes = ["dep:bytes"]

[dependencies]
bytes = { version = "1.5.0", optional = true, default-features = false }
