[package]
description = "Low-level networking for Bevy"
name = "aeronet"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
sampling = ["aeronet_transport/sampling"]
visualizer = ["aeronet_transport/visualizer"]

[dependencies]
aeronet_io = { workspace = true }
aeronet_transport = { workspace = true }

bevy_app = { workspace = true }
