[package]
description = "Low-level networking for Bevy"
name        = "aeronet"
version     = "0.14.0-rc.1"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]

## Enables standard library support.
std = ["aeronet_transport/std"]

## Enables `aeronet_transport/visualizer`.
visualizer = ["aeronet_transport/visualizer"]

## Enable this when generating docs.
document-features = [
  "aeronet_transport/document-features",
  "dep:document-features",
]

[dependencies]
aeronet_io        = { workspace = true }
aeronet_transport = { workspace = true }
bevy_app          = { workspace = true }
document-features = { workspace = true, optional = true }
