[package]
description = "In-memory MPSC channel IO layer implementation for aeronet"
name = "aeronet_channel"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]

std = ["aeronet_io/std"]

[dependencies]
aeronet_io = { workspace = true }

bytes = { workspace = true }
crossbeam-channel = { workspace = true }
derive_more = { workspace = true, features = ["display", "error"] }
oneshot = { workspace = true }
sync_wrapper = { workspace = true }
tracing = { workspace = true }

bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_time = { workspace = true }

[dev-dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
