[package]
name = "aeronet_channel"
version = "0.19.1"
edition.workspace = true
description = "In-memory MPSC channel IO layer implementation for `aeronet`"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs_aeronet"]

[dependencies]
aeronet_io = { workspace = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_platform = { workspace = true }
bytes = { workspace = true }
derive_more = { workspace = true, features = ["display", "error"] }
flume = { workspace = true }
oneshot = { workspace = true }
sync_wrapper = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }

[lints]
workspace = true
