[package]
description = "Sans-IO protocol implementation for aeronet"
name = "aeronet_proto"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
## Allows serializing types using [`serde`](https://docs.rs/serde).
serde = ["dep:serde"]

## Allows drawing network statistics in an [`egui`](https://docs.rs/egui) UI.
stats = ["dep:egui", "dep:size"]

[dependencies]
aeronet = { workspace = true }

ahash = { workspace = true }
arbitrary = { workspace = true }
bitvec = { workspace = true }
circular-buffer = { workspace = true }
datasize = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
octs = { workspace = true }
terrors = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
web-time = { workspace = true }

serde = { workspace = true, optional = true }

egui = { workspace = true, optional = true }
size = { workspace = true, optional = true }

[dev-dependencies]
assert_matches = { workspace = true }
