[package]
description = "`aeronet` backend implementation for `bevy_replicon`"
name = "aeronet_replicon"
version = "0.13.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]

## Enables [`portable-atomic/critical-section`][cs], used for targets without native atomic CAS.
##
## [cs]: https://docs.rs/portable-atomic/latest/portable_atomic/
critical-section = ["aeronet_transport/critical-section"]

## Enables standard library support.
std = ["aeronet_transport/std"]

## Enables support for `bevy_replicon/client`.
client = ["bevy_replicon/client"]

## Enables support for `bevy_replicon/server`.
server = ["bevy_replicon/server"]

## Enable this when generating docs.
document-features = ["dep:document-features"]

[dependencies]
aeronet_io = { workspace = true }
aeronet_transport = { workspace = true }

tracing = { workspace = true }

bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_platform_support = { workspace = true, features = ["alloc"] }
bevy_reflect = { workspace = true }

bevy_replicon = { workspace = true }

document-features = { workspace = true, optional = true }
