[package]
description = "Steam networking IO layer implementation for `aeronet`"
name        = "aeronet_steam"
version     = "0.14.0-rc.1"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
## Enables the `client` module.
client = []

## Enables the `server` module.
server = []

[dependencies]
aeronet_io            = { workspace = true }
anyhow                = { workspace = true }
bevy_app              = { workspace = true }
bevy_ecs              = { workspace = true }
bevy_platform_support = { workspace = true }
blocking              = { workspace = true }
bytes                 = { workspace = true }
oneshot               = { workspace = true }
sync_wrapper          = { workspace = true }
tracing               = { workspace = true }

derive_more = { workspace = true, features = [
  "display",
  "error",
  "deref",
  "deref_mut",
] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
steamworks = { workspace = true }

[dev-dependencies]
bevy      = { workspace = true }
bevy_egui = { workspace = true }

[[example]]
name              = "steam_client"
path              = "examples/steam_client.rs"
required-features = ["client"]

[[example]]
name              = "steam_server"
path              = "examples/steam_server.rs"
required-features = ["server"]
